Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34941

QClipboard::dataChanged doesn't work correctly on Mac OS X

XMLWordPrintable

    • macOS
    • 1cfd45782638b8266d46af289de5abdd0371fc27

      Application miss QClipboard::dataChanged() signal if trying to get clipboard data change from other application. Reading from documentation this should be possible if application is active. And it works in Qt 4.8 when application is set to active.

      QClipboard::dataChanged() documentation says:
      "On Mac OS X and with Qt version 4.3 or higher, clipboard changes made by other applications will only be detected when the application is activated."

      Issue can be reproduced with attached clipboard test application. Run 2 instances of application and press start button in other. That launches timer which changes clipboard data and is printed to window. Then activating other window we should see same clipboard data than in window where timer is running. But it's not getting any signal without starting local timer.

        For Gerrit Dashboard: QTBUG-34941
        # Subject Branch Project Status CR V

            dzedsystems Dyami Caliri
            qtcomsupport Qt Support
            Votes:
            2 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes